# rustdump

./: Cargo.toml
src/: assets.rs  main.rs
src/components/: asciiview.rs  headertable.rs  hexview.rs  mod.rs  titlebar.rs
src/routes/: mod.rs
src/routes/assembly/: assembly.rs
src/routes/hexdump/: hexdump.rs
src/routes/info/: info.rs  mod.rs  section_hdrs_table.rs
src/routes/starting/: starting.rs
