[package]
name = "app"
version = "0.1.0"
edition = "2024"

#[dev-dependencies]
#criterion = "0.3"

#[[bench]]
#name = "benchmark"
#harness = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
gpui = "0.2.2"
gpui-component = "0.5.0"
rfd = "0.16.0"
rust-embed = "8.9.0"
core = { path = "../core" }
gpui-component-assets = "0.5.0"
