[package]
name = "app"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
gpui = "0.2.2"
gpui-component = "0.5.0"
rfd = "0.16.0"
rust-embed = "8.9.0"
rd_core = { path = "../rd_core" }
gpui-component-assets = "0.5.0"
pe_parse = { path = "../pe_parse" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
